refactor: simplify & rework project structure
