# src/router/docsRouter.ts
@@ -1,18 +1,21 @@
 import express, { Router } from "express";
 import path from "path";
 
-import config from "@/config";
 import { request } from "@/middleware";
+
+import config from "/config";
 
 const docsRouter: Router = express.Router();
 const docsPaths = {
-  docs: path.join(config.API_BASE_PATH, "openapi.json")
+  openapi: path.join(config.API_BASE_PATH, "openapi.json"),
+  redoc: path.join(config.API_BASE_PATH, "redoc")
 };
 
 /**
  * @openapi
  * /api/openapi.json:
  *   get:
+ *     operationId: getOpenapijson
  *     summary: Serve OpenAPI documentation
  *     description: Serves the OpenAPI documentation as a JSON file.
  *     responses:
@@ -29,9 +32,36 @@ const docsPaths = {
  *         description: Internal server error.
  */
 docsRouter.use(
-  docsPaths.docs,
+  docsPaths.openapi,
   request(["GET"]),
   express.static(path.join(config.ROOT_PATH, "docs", "openapi.json"))
+);
+
+/**
+ * @openapi
+ * /api/redoc:
+ *   get:
+ *     operationId: getRedoc
+ *     summary: Serve ReDoc documentation from OpenAPI schema
+ *     description: Serves the ReDoc documentation as static site.
+ *     responses:
+ *       '200':
+ *         description: The ReDoc documentation as static site.
+ *         content:
+ *           text/html:
+ *             schema:
+ *               type: string
+ *               format: html
+ *               description: The static ReDoc documentation.
+ *       '404':
+ *         description: The documentation static HTML file was not found.
+ *       '500':
+ *         description: Internal server error.
+ */
+docsRouter.use(
+  docsPaths.redoc,
+  request(["GET"]),
+  express.static(path.join(config.ROOT_PATH, "static", "redoc.html"))
 );
 
 export { docsRouter, docsPaths };
